overflow x fix

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   --modal-special-color: #B0C7ED;
 }
 
+
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 * {
   padding: 0;
   margin: 0;
